--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
   <main>
     <div class="card">
-      <img src="assets/images/illustration-article.svg" alt="article image">
+      <div class="card-img">
+        <img src="assets/images/illustration-article.svg" alt="article image">
+      </div>
       <div class="card-tag">
         <p>Learning</p>
       </div>
